<resources>
    <string name="app_name">EasyVocab</string>
    <string name="difficulty">Difficulté</string>
    <string name="easy">Facile</string>
    <string name="moyen">Moyen</string>
    <string name="hard">Dificile</string>
    <string name="easyvocab">EasyVocab</string>
    <string name="touch_to_start">Touchez pour démarrer</string>
    <string name="question">Question</string>
    <string name="reponse_1">Reponse 1</string>
    <string name="reponse_2">Reponse 2</string>
    <string name="reponse_3">Reponse 3</string>
    <string name="touch_to_continue">Touchez pour continuer</string>
    <string name="your_score">Ton score :</string>
    <string name="new_best">Nouveau record !</string>
    <string name="open_dictionary">Ouvrir Dictionnaire</string>
    <string name="enter_a_word">Entrez un mot (en anglais)</string>
    <string name="search">Chercher</string>
</resources>