<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty"
            android:textSize="60sp"
            android:paddingBottom="30dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ENEasy"
                android:text="@string/easy"
                android:textSize="40sp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"/>

            <TextView
                android:id="@+id/scoreEasy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ENMoyen"
                android:text="@string/moyen"
                android:textSize="40sp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"/>

            <TextView
                android:id="@+id/scoreMoyen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ENHard"
                android:text="@string/hard"
                android:textSize="40sp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"/>

            <TextView
                android:id="@+id/scoreHard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/scoreScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center|bottom">

        <Button
            android:id="@+id/openDictionaryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_dictionary" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>